src/test/deca/context/invalid/testDoubleDefnitionVar.deca
// Description : Double définition d'une variable
{
    int x;
    boolean x;
}
